2006-02-12  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::saveRC): Save original nick, not the ones with
	_'s appended while trying to enter chat room.

	* tkchat.tcl (::tkchat::Init): Ensure that color data is generated for
	(::tkchat::setNickname):       new nicks, not just ones that have
	(::tkjabber::cleanup):         posted messages. This fixes a crash
	(::tkjabber::LoginCB):         when a One to One chat window is created
	(::tkjabber::MucEnterCB):      for a new nick. Also fixes some Online
	(::tkchat::updateJabberNames): nicks not showing up in the color change
	(::tkjabber::setNick):         dialog. New procedure
	(::tkjabber::transferNick):    ::tkchat::setNickname.

2006-02-11  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::checkAlert): Alert for whispers and One to One
	(::tkchat::alertWhenIdle):           chats.
	(::tkchat::addMessage):
	(::tkjabber::getChatWidget):

	* tkchat.tcl (::tkchat::CreateGUI): Don't set unneeded color tags.
	(::tkchat::SetChatWindowBindings):
	(::tkchat::ChangeColors):
	(::tkchat::applyColors):
	(::tkchat::Init):

	* tkchat.tcl (::tkjabber::MsgCB): Remove /me from messages for One to
	(::tkchat::userPostOneToOne):     One chat.

2006-02-03  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::IncrMessageCounter): Don't count traffic
	messages.

	* tkchat.tcl (::tkchat::DoVis): Prevent crash when changing a nick's
	(::tkjabber::connect):          visibility status while not logged in.
	(::tkjabber::cleanup):

	* tkchat.tcl (::tkchat::NickVisMenu): Prevent nick from being eval'ed
	if it contains [].

	* tkchat.tcl (::tkchat::CheckCommands): Split into online and offline
	commands.

	* tkchat.tcl (::tkchat::saveRC): only save options that are different
	(::tkchat::Init):                from defaults. Re-written so that it
	(::tkchat::GetDefaultOptions):   builds up the options to save rather
	than remove the one not to be saved. New procedure